ejercicio_10/10_09_areas-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: areas-backend-service
  namespace: dev
spec:
  selector:
    app: areas-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
